--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "final_project",
   "version": "1.0.0",
-  "description": "",
+  "description": "Web Development Final Project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.20.0"
+  },
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
